[package]
name = "fctrl"
version = "0.1.0"
edition = "2021"

[dependencies]
# mpu6050 = "0.1.6"
mpu6050-dmp = {version = "0.6.1", features = ["async"]}
embassy-executor = { version = "0.9.0", features = ["defmt", "arch-cortex-m", "executor-thread"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
embassy-sync = { version = "0.7.2", features = [ "defmt" ] }

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"

embedded-hal = "0.2.6"
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = { version = "1.0" }
embedded-hal-bus = { version = "0.1", features = ["async"] }

panic-probe = { version = "1.0.0", features = ["print-defmt"] }
defmt-rtt = "1.1.0"
defmt = "1.0.1"

[dependencies.embassy-stm32]  
version = "0.4.0"
features = ["stm32l431rc", "unstable-pac", "memory-x", "time-driver-any", "exti", "chrono"]

